--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 </head>
 
 <body>
@@ -25,6 +25,11 @@ Weather Dashboard
     </div>
     
     <div class="selected-city">
+      <h1 id="current-city"></h1>
+      <p id="current-temp"></p>
+      <p id="current-humidity"></p>
+      <p id="current-windspeed"></p>
+      <p id="uv-index"></p>
     </div>
     <div class="five-day-forcast">
     </div>
