added current city and date display

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ Weather Dashboard
     
     <div class="selected-city">
       <h1 id="current-city"></h1>
+      <h3 id="date"></h3>
       <p id="current-temp"></p>
       <p id="current-humidity"></p>
       <p id="current-windspeed"></p>
@@ -34,6 +35,7 @@ Weather Dashboard
     <div class="five-day-forcast">
     </div>
 </main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="./assests/js/script.js"></script>
 </body>
 </html>
