updating div to search button and input

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       </div>
     </div>
   <!--Choosen city current weather-->
+  <div class="columns is-variable">
     <div class="selected-city column box">
       <h1 id="current-city" class="title"></h1>
       <h3 id="date" class="subtitle"></h3>
@@ -39,6 +40,7 @@
       <p id="current-windspeed"></p>
       <p id="uv-index"></p>
     </div>
+  </div>
     <!--Choosen city 5-Day Forecast-->
 <div class="columns is-variable">
       <div id="DayOne" class="column box">
